# UniversalSlashingSimulator

./: .gitignore  CMakeLists.txt  README.md  UniversalSlashingSimulator.sln  UniversalSlashingSimulator.vcxproj  UniversalSlashingSimulator.vcxproj.filters
Core/: Common.h
Core/Diagnostics/: CrashHandler.cpp  CrashHandler.h
Core/Hooks/: HookTypes.h
Core/Logging/: Log.cpp  Log.h
Core/Memory/: Memory.cpp  Memory.h  PatternScanner.cpp  PatternScanner.h
Core/Versioning/: VersionInfo.h  VersionResolver.cpp  VersionResolver.h
Engine/: EngineCore.cpp  EngineCore.h
Engine/CoreTypes/: FString.h  NamePool.cpp  NamePool.h  ObjectArray.cpp  ObjectArray.h  OffsetResolver.cpp  OffsetResolver.h
Engine/Events/: ProcessEventDispatcher.cpp  ProcessEventDispatcher.h
Engine/Reflection/: PropertyIterator.cpp  PropertyIterator.h
Engine/Replication/: FastArraySerializer.cpp  FastArraySerializer.h
Engine/UObject/: UObjectWrapper.cpp  UObjectWrapper.h
Entry/: DllMain.cpp
STW/Building/: BuildingManager.cpp  BuildingManager.h  BuildingTypes.h
STW/GameMode/: STWGameMode.cpp  STWGameMode.h
STW/Inventory/: InventoryManager.cpp  InventoryManager.h  InventoryTypes.h
STW/Missions/: MissionManager.cpp  MissionManager.h  MissionObjective.cpp  MissionObjective.h  MissionTypes.h
STW/Player/: STWPlayerController.cpp  STWPlayerController.h  STWPlayerPawn.cpp  STWPlayerPawn.h
